--- a/www/index.html
+++ b/www/index.html
@@ -7,17 +7,14 @@
 
 		<link href="css/robotodraft.css" rel="stylesheet">
 		<link href="css/ionic.min.css" rel="stylesheet">
+		<link href="css/ion-md-input.min.css" rel="stylesheet">
 		<link href="css/ionic.material.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 
 		<script src="js/jquery-1.11.3.min.js"></script>
-		<script src="js/angular/angular.min.js"></script>
-		<script src="js/angular/angular-animate.min.js"></script>
-		<script src="js/angular/angular-sanitize.min.js"></script>
-		<script src="js/angular-ui/angular-ui-router.min.js"></script>
-		<script src="js/ionic.min.js"></script>
-		<script src="js/ionic-angular.min.js"></script>
+		<script src="js/ionic.bundle.min.js"></script>
 		<script src="js/ionic.material.min.js"></script>
+		<script src="js/ion-md-input.min.js"></script>
 		<script src="cordova.js"></script>
 
 		<script src="js/app.js"></script>
